--- a/Lab9_Apprentissage-student.ipynb
+++ b/Lab9_Apprentissage-student.ipynb
@@ -113,7 +113,7 @@
     "# Petit déplacement des éléments de la seconde partition\n",
     "X[::2] -= np.array([3, 7]) \n",
     "# Création des partitions\n",
-    "blocks = np.array([0, 1] * (X.shape[0] / 2))"
+    "blocks = np.array([0, 1] * (int)(X.shape[0] / 2))"
    ]
   },
   {
